[metadata]
name = ibonPrinter
version = 0.1.0
description = 7-11 iBon printer uploader
long_description = file: README.md
author = ThanatosDi, superbil
keywords = ibon, api, python, printer, uploader
license = MIT
url = https://github.com/Superbil/ibonPrinter
download_url = https://github.com/Superbil/ibonPrinter/releases

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Topic :: Internet :: API

[options]
zip_safe = False
packages = ibon
python_requires = >3
install_requires =
    requests
